# Xenon

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  NAS+AI产品研究报告.md  README.md  README_CN.md  agent.yaml  extract_resume.py  hello.py  lesson8_class_variable.py  omniagent.bat  omniagent_launcher.pyw  optimized_voice_calendar.py  pyproject.toml  read_resume.py  temp_resume.txt  test_all_modules.py  test_resume_sync.txt
.github/workflows/: ci.yml  pypi-publish.yml
config/: code_execution_flow.yaml  credentials.example.yaml  default_flow.yaml  models.example.yaml  simple_code_flow.yaml
docs/: ARCHITECTURE.md  COMPARISON.md  DEEPSEEK_INTEGRATION.md  EVAL_RESULTS.md  GUIDE.md  INTEGRATIONS.md  MEMORY_SYSTEM_SPEC.md  OPERATION_GUIDE.md  TUI.md  deepseek-guide.md  omniagent-design-spec-v1.1.html  差距分析与改进建议.md
docs/articles/: 01-six-engineering-decisions.md  PUBLISHING_PLAN.md
docs/assets/: xenon-star-core-v2.md
docs/reports/v0.2.2/: REAL_TASK_TEST_REPORT.md  VERIFICATION_REPORT.md
evals/: __init__.py  context_eval.py  humaneval_runner.py  mock_agent.py  runner.py  stress_test.py  tasks.yaml
evals/multilang/: run_multilang.py
evals/reports/: mock_report_2.md  mock_report_3.md  sample_report.md
omniagent/: __init__.py  main.py
omniagent/core/: __init__.py  app.py  config.py
omniagent/engine/: agent_card.py  async_engine.py  base.py  base_engine.py  callbacks.py  circuit_breaker.py  combined_engines.py  compactor.py  context.py  event_bus.py  hollow_detector.py  novel_engine.py  novel_manager.py  output_schemas.py  permissions.py  plan_dag.py  plan_execute_engine.py  react_engine.py  reflection_engine.py  run_recorder.py  scheduler.py  subagent.py  tool_executor.py  tool_tracker.py  trace.py
omniagent/events/: __init__.py  bus.py  callbacks_bridge.py  models.py
omniagent/nodes/: base.py  llm_node.py  router_node.py  tool_executor.py  tool_node.py
omniagent/repl/: auto_router.py  batch_register.py  benchmark_fetcher.py  cards.py  code_editor.py  commands.py  config_watcher.py  context_manager.py  difficulty_estimator.py  file_links.py  library.py  memory.py  model_pool.py  model_registry.py  output_renderer.py  project_context.py  prompt_memory.py  prompt_optimizer.py  prompt_store.py  provider_registry.py  repl.py  session.py  setup_wizard.py  shell_runner.py  shortcut_manager.py  skill_manager.py  status_bar.py  terminal_bridge.py
omniagent/tests/: test_subagent.py  test_tool_audit.py
omniagent/tools/: __init__.py  base.py  batch.py  code.py  command.py  dynamic.py  file_ops.py  mcp_tool.py  registry.py  search_git.py  utils.py  web.py
omniagent/tui/: app.py
omniagent/utils/: config_parser.py  llm_client.py  lsp_provider.py  refactor.py  response_adapter.py  weather.py
tests/: analyze_now.py  conftest.py  professional_benchmark.py  test_agent_card.py  test_auto_router.py  test_b11_stdio_timeout.py  test_b12_truncation.py  test_b1_command_quoted.py  test_b3_model_priority.py  test_b4_max_tokens.py  test_b7_model_overrides.py  test_b8_verify_file_claims.py  test_batch_register.py  test_c2_env_key_fallback.py  test_c2b_llm_client_env.py  test_c3_ctrl_c_pending_exit.py  test_callbacks.py  test_cards.py  test_code_editor.py  test_code_index.py  test_config_watcher.py  test_context_continuity.py  test_context_manager.py  test_context_strategies.py  test_core.py  test_custom_provider.py  test_e1_scout.py  test_e2_mini_react.py  test_e2_plan_dag.py  test_e2e_file_ops.py  test_e2e_real.py  test_e3_event_bus.py  test_e4_reflection.py  test_e5_spawn_agent.py  test_evals.py  test_execution_policy.py  test_f1_tool_executor.py  test_f2_budget.py  test_f2_hollow.py  test_f2_mercy_synthesis.py  (+66 more)
tests/chaos/: test_chaos_concurrent_tool_calls.py  test_chaos_empty_tool_calls.py  test_chaos_huge_output.py  test_chaos_malformed_json.py  test_chaos_network_outage.py  test_chaos_rate_limit.py  test_chaos_tool_exception.py  test_execution_recovery_chaos.py
tests/e2e/: test_cli_workflows.py
xenon/: __init__.py  integration_cli.py  main.py
xenon/engine/: base.py  budget.py  callbacks.py  combined_engines.py  context.py  event_bus.py  hollow_detector.py  novel_engine.py  plan_dag.py  plan_execute_engine.py  react_engine.py  reflection_engine.py  scheduler.py  scout.py  tool_tracker.py  trace.py
xenon/mcp/: __init__.py  client.py  registry.py  transport.py
xenon/memory/: __init__.py  backend.py  candidate.py  compiler.py  locking.py  models.py  registry.py  retrieval.py  service.py
xenon/nodes/: base.py  llm_node.py  router_node.py  tool_executor.py  tool_node.py
xenon/repl/: auto_router.py  batch_register.py  benchmark_fetcher.py  clickable_paths.py  code_editor.py  commands.py  completer.py  config_watcher.py  context_manager.py  context_strategies.py  difficulty_estimator.py  execution_policy.py  library.py  memory.py  model_pool.py  model_registry.py  permissions.py  project_context.py  prompt_optimizer.py  provider_registry.py  repl.py  routing_history.py  semantic_chunker.py  session.py  session_lock.py  setup_wizard.py  shortcut_manager.py  skill_manager.py  status_bar.py  terminal_activity.py
xenon/tests/: test_cache_commands.py  test_deepseek_cache.py  test_prompt_compiler.py  test_subagent.py  test_tool_audit.py
xenon/tools/: __init__.py  clipboard_monitor.py  vision_bridge.py
xenon/utils/: ast_analyzer.py  atomic_write.py  cache_telemetry.py  code_index.py  config_parser.py  deepseek_cache.py  llm_client.py  logo.py  prompt_compiler.py  refactor.py  response_adapter.py  weather.py
(+12 files in other folders)
