[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xenon"
version = "0.6.2"
description = "Xenon: Local-first AI coding assistant with 8 reasoning paradigms and 20+ built-in tools"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "xianyu-sheng"},
]
keywords = ["ai", "coding-assistant", "cli", "deepseek", "react", "agent", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Terminals",
]
dependencies = [
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0",
    "jedi>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/xianyu-sheng/Xenon"
Repository = "https://github.com/xianyu-sheng/Xenon"
Issues = "https://github.com/xianyu-sheng/Xenon/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
xenon = "xenon.main:cli"

[tool.setuptools.packages.find]
include = ["xenon*"]
